--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -7,34 +7,42 @@
 /* Base container styles */
 .container {
     width: 100%;
-    max-width: $container-max-width;
     padding: 0 $container-padding;
     margin: 0 auto;
+}
+
+/* Apply responsive max-widths to the default container */
+.container {
+    @each $breakpoint, $container-max-width in $container-max-widths {
+        @include breakpoint($breakpoint) {
+            max-width: $container-max-width;
+        }
+    }
 }
 
 /* Base styles for flex containers */
 .row {
     margin: 0 -#{$col-padding};
     @include flex();
+}
 
-    /* Generate column classes based on grid columns */
-    @for $i from 1 through $grid-columns {
-        /* Standard column */
-        .col-#{$i} {
-            width: grid-size($i);
-            padding: 0 $col-padding;
-        }
+/* Generate column classes based on grid columns */
+@for $i from 1 through $grid-columns {
+    /* Standard column */
+    .col-#{$i} {
+        width: grid-size($i);
+        padding: 0 $col-padding;
     }
-    /* Responsive column logic for specific breakpoints */
-    @each $breakpoint, $width in $breakpoints {
-        @if $breakpoint != 'xs' {
-            @include breakpoint($breakpoint) {
-                @for $i from 1 through $grid-columns {
-                    /* Responsive column */
-                    .col-#{$breakpoint}-#{$i} {
-                        width: grid-size($i);
-                        padding: 0 $col-padding;
-                    }
+}
+/* Responsive column logic for specific breakpoints */
+@each $breakpoint, $width in $breakpoints {
+    @if $breakpoint != 'xs' {
+        @include breakpoint($breakpoint) {
+            @for $i from 1 through $grid-columns {
+                /* Responsive column */
+                .col-#{$breakpoint}-#{$i} {
+                    width: grid-size($i);
+                    padding: 0 $col-padding;
                 }
             }
         }
