--- a/src/styles/utils/_config.scss
+++ b/src/styles/utils/_config.scss
@@ -3,15 +3,23 @@
 /* -------------------------------------------------------- */
 
 $breakpoints: (
+    sm: 580px,
     md: 768px,
     lg: 1024px,
+    xl: 1280px,
 );
 
 $grid-columns: 12;
 
 $col-padding: 8px;
 $container-padding: 16px;
-$container-max-width: 1440px;
+
+$container-max-widths: (
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1440px,
+);
 
 $colors: (
     light: (
@@ -29,6 +37,63 @@ $colors: (
 
         body-font: #ffffff,
         body-background: #1c1a17,
+
+        type-normal-background: #8b93a1,
+        type-normal-font: #000000,
+
+        type-fighting-background: #b53a2f,
+        type-fighting-font: #ffffff,
+
+        type-flying-background: #4a90e2,
+        type-flying-font: #000000,
+
+        type-poison-background: #7b3bb3,
+        type-poison-font: #ffffff,
+
+        type-ground-background: #a66a2a,
+        type-ground-font: #000000,
+
+        type-rock-background: #7a6a3a,
+        type-rock-font: #ffffff,
+
+        type-bug-background: #4d8b1c,
+        type-bug-font: #000000,
+
+        type-ghost-background: #4b3f72,
+        type-ghost-font: #ffffff,
+
+        type-steel-background: #5b6b7a,
+        type-steel-font: #ffffff,
+
+        type-fire-background: #d35400,
+        type-fire-font: #000000,
+
+        type-water-background: #1e66d0,
+        type-water-font: #ffffff,
+
+        type-grass-background: #1f8a3b,
+        type-grass-font: #000000,
+
+        type-electric-background: #f4c21b,
+        type-electric-font: #000000,
+
+        type-psychic-background: #d81b60,
+        type-psychic-font: #ffffff,
+
+        type-ice-background: #3ccfcf,
+        type-ice-font: #000000,
+
+        type-dragon-background: #3b2dba,
+        type-dragon-font: #ffffff,
+
+        type-dark-background: #2b2b2b,
+        type-dark-font: #ffffff,
+
+        type-fairy-background: #f08ab8,
+        type-fairy-font: #000000,
+
+        type-stellar-background: #6a00ff,
+        type-stellar-font: #ffffff,
     ),
 );
 
