feat(styles): updated base-styles and config

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -60,6 +60,14 @@
                 .col-#{$breakpoint}-right-#{$i} {
                     margin-right: grid-size($i);
                 }
+
+                .col-#{$breakpoint}-left-0 {
+                    margin-left: 0;
+                }
+
+                .col-#{$breakpoint}-right-0 {
+                    margin-right: 0;
+                }
             }
         }
     }
