--- a/src/styles/utils/_config.scss
+++ b/src/styles/utils/_config.scss
@@ -29,6 +29,8 @@ $colors: (
         grey: #3f3d39,
         dark-grey: #2b2a28,
 
+        border: #8b93a1,
+
         primary: #ff8000,
         primary-hover: #ae5603,
 
@@ -145,3 +147,7 @@ $transition-time: 0.4s;
 $header-height-mobile: 80px;
 $header-height-tablet: 80px;
 $header-height-desktop: 80px;
+
+$footer-height-mobile: 80px;
+$footer-height-tablet: 80px;
+$footer-height-desktop: 80px;
