--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -29,7 +29,8 @@ figure,
 footer,
 header,
 nav,
-section {
+section,
+dialog {
     margin: 0;
     padding: 0;
     border: 0;
@@ -87,6 +88,23 @@ button {
         cursor: not-allowed;
         pointer-events: none;
     }
+}
+
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+    appearance: none;
+    display: none;
+}
+
+/* (Legacy) MS/Edge */
+input[type='search']::-ms-clear,
+input[type='search']::-ms-reveal {
+    display: none;
+    width: 0;
+    height: 0;
 }
 
 /* Links */
