feat(styles): updated reboot and config

--- a/src/styles/utils/_config.scss
+++ b/src/styles/utils/_config.scss
@@ -108,10 +108,12 @@ $font-size-desktop: 16px;
 $font-size-h1-mobile: 32px;
 $font-size-h2-mobile: 26px;
 $font-size-h3-mobile: 22px;
+$font-size-h4-mobile: 20px;
 
 $font-size-h1-tablet: 42px;
 $font-size-h2-tablet: 30px;
 $font-size-h3-tablet: 24px;
+$font-size-h4-tablet: 22px;
 
 $font-size-h1-desktop: 58px;
 $font-size-h2-desktop: 36px;
