--- a/src/styles/base/_reboot.scss
+++ b/src/styles/base/_reboot.scss
@@ -25,7 +25,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     margin-bottom: 16px;
     font-family: $font-family-headline;
     font-weight: $font-weight-bold;
@@ -61,6 +62,14 @@ h3 {
 
     @include breakpoint(md) {
         font-size: $font-size-h3-tablet;
+    }
+}
+
+h3 {
+    font-size: $font-size-h4-mobile;
+
+    @include breakpoint(md) {
+        font-size: $font-size-h4-tablet;
     }
 }
 
