feat(styles): updated global-styles

--- a/src/styles/base/_reboot.scss
+++ b/src/styles/base/_reboot.scss
@@ -8,11 +8,19 @@ html {
     line-height: 1.5;
 }
 
+html,
 body {
+    height: 100%;
+}
+
+body {
+    min-height: 100vh;
+    min-height: 100dvh;
     font-family: $font-family-body;
     font-size: get-rem($font-size-mobile);
     color: var(--color-body-font);
     background-color: var(--color-body-background);
+    overflow: hidden;
 
     @include breakpoint(md) {
         font-size: get-rem($font-size-tablet);
@@ -156,16 +164,10 @@ dialog {
 }
 
 /* Main */
-
 main {
-    min-height: calc(100vh - $header-height-mobile - $footer-height-mobile);
-    padding-top: 400px;
-
-    @include breakpoint(md) {
-        min-height: calc(100vh - $header-height-tablet - $footer-height-tablet);
-    }
-
-    @include breakpoint(lg) {
-        min-height: calc(100vh - $header-height-desktop - $footer-height-desktop);
-    }
+    height: 100vh;
+    height: 100dvh;
+    padding-top: #{$header-height * 1.2};
+    padding-bottom: $footer-height;
+    overflow: hidden;
 }
