--- a/src/styles/utils/_config.scss
+++ b/src/styles/utils/_config.scss
@@ -146,10 +146,6 @@ $z-index-9: 900;
 
 $transition-time: 0.4s;
 
-$header-height-mobile: 80px;
-$header-height-tablet: 80px;
-$header-height-desktop: 80px;
+$header-height: 80px;
 
-$footer-height-mobile: 80px;
-$footer-height-tablet: 80px;
-$footer-height-desktop: 80px;
+$footer-height: 50px;
