--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: $header-height-mobile;
+    height: $header-height;
     background-color: var(--color-body-background);
     border-bottom: 1px solid var(--color-border);
 
