--- a/src/styles/components/_pokemon.scss
+++ b/src/styles/components/_pokemon.scss
@@ -8,6 +8,7 @@
     }
 
     &--card {
+        height: 100%;
         border: 4px solid transparent;
         border-radius: 16px;
 
@@ -15,6 +16,7 @@
                 padding-box,
             linear-gradient(45deg, var(--pokemon-border-color-1), var(--pokemon-border-color-2))
                 border-box;
+        cursor: pointer;
     }
 
     &--detail {
