feat(styles): finished component-styles

--- a/src/styles/components/_pokemon-dialog.scss
+++ b/src/styles/components/_pokemon-dialog.scss
@@ -5,6 +5,7 @@
     width: calc(100% - 24px);
     max-width: 768px;
     height: 75vh;
+    max-height: 880px;
     padding: 48px 24px;
     border-radius: 16px;
     border: 2px solid var(--color-border);
