--- a/src/styles/components/_pokedex.scss
+++ b/src/styles/components/_pokedex.scss
@@ -17,6 +17,7 @@
     }
 
     &__list {
+        align-content: flex-start;
         height: calc(100% - var(--load-more-space));
         padding: 0;
         margin: 0;
@@ -26,6 +27,7 @@
     }
 
     &__item {
+        display: flex;
         margin-bottom: 16px;
     }
 
