feat(styles): deactivate load-more button when search is used

--- a/src/styles/components/_pokedex.scss
+++ b/src/styles/components/_pokedex.scss
@@ -7,6 +7,13 @@
     height: calc(100dvh - #{$header-height * 1.2} - $footer-height);
     overflow: hidden;
 
+    &--search {
+        .pokedex__load-more {
+            opacity: 0.35;
+            pointer-events: none;
+        }
+    }
+
     > .row {
         height: 100%;
 
